Therion 6.0.1 (in progress):
 * flexible altitude bar height based on the number of colours in use
 * bugs fixed:
   - wrong shading patterns references when exporting multiple maps

--------------------------------------------------------------------------------

Therion 6.0.0 (2021-07-13):

therion:
 * support for colour models: cmyk, rgb, grayscale (see the color-model layout
   option in the Thbook)
 * support for colour management (see the color-profile layout option)
 * support for linear and radial shading (colour gradients) in MetaPost
   (withlinearshading and withradialshading options)
 * support for smooth colour transitions of scrap backgrounds in PDF maps
   if the map-fg is coloured by altitude
 * added smooth-shading <off/quick> layout switch – quick is the default
 * reimplemented internal processing of patterns and transparent colors in
   MetaPost (incompatible changes: the drawing option 'withtransparentcolor',
   macro 'def_transparent_rgb' and predefined transparent colors tr_bg,
   tr_white, tr_black were removed; use the drawing option
   'withcolor <color> withalpha <number>' instead)
 * reimplemented conversion of MetaPost output to PDF
 * support for double number system in MetaPost (this eliminates the current
   MetaPost limits; see the chapter Limitations in the Appendix of the Thbook)
 * tex-refs-registers <on/off> initialization file option added (see the
   chapters Initialization files and Limitations in the Appendix of the Thbook)
 * support for LuaTeX as an alternative to pdfTeX
 * support for relative paths in TeX (\inputrel, \savepath and \loadpicture) and
   in MetaPost (inputrel)
 * updated Serbian translation
 * bugs fixed:
   - symbol-hide,show,color not working for user defined symbols
   - ISO8859-2 literals in the source code caused clang warnings
   - removed unnecessary SOURCE_DATE_EPOCH in the thbook Makefile
   - fixed numerical instability in l_overhang_SKBB
   - swapped anastomosis & karren symbols